Tentando implementar o Markup

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
   <script src="js/BIM360IssueExtension.js"></script>
+  <script src="js/markupExt.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
