--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
       </ul>
     </div>
   </nav>
+  
   <!-- End of navbar -->
   <div class="container-fluid fill">
     <div class="row fill">
@@ -65,6 +66,28 @@
       </div>
       <div class="col-sm-8 fill">
         <div id="forgeViewer"></div>
+      </div>
+    </div>
+  </div>
+  <button type="button" id="btn-anexo" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Anexos de Anomalias</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="img">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        </div>
       </div>
     </div>
   </div>
