--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <button type="button" id="btn-anexo" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  <button type="button" id="btn-anexo" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="display: none;">
     Launch demo modal
   </button>
   
@@ -78,7 +78,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Anexos de Anomalias</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Anexos da Anomalia</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
