Removendo o issueId do localstorage 2

--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,9 @@
 </body>
 <script>
   function showIssues(){
+    localStorage.removeItem('nivelAlerta');
+    localStorage.removeItem('causaRaiz');
+    localStorage.removeItem('issueId');
     let nivelAlerta = $('#nivelAlerta').val()
     let causaRaiz = $('#causaRaiz').val()
     let issueId = $('#issueId').val()
