--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,12 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <div class="navbar-form navbar-left">
-              <button type="submit" id="btn-search-issues" onclick="closePanel()" class="btn btn-warning" data-toggle="modal" data-target="#filterIssues" style="display: none;"><i class="fas fa-search"></i></button>
+              <button type="submit" onclick="closePanel()" class="btn btn-warning btn-search-issues" data-toggle="modal" data-target="#filterIssues" style="display: none;"><i class="fas fa-search"></i></button>
             </div>
           </li>
           <li class="dropdown">
             <div class="navbar-form navbar-left">
-              <button type="submit" id="btn-search-issues" onclick="exportXLS()" class="btn btn-success"><i class="fas fa-file-excel"></i></button>
+              <button type="submit" onclick="exportXLS()" class="btn btn-success btn-search-issues" style="display: none;"><i class="fas fa-file-excel"></i></button>
             </div>
           </li>
         </ul>
