Alterado o icone do filtro de issues

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <div class="navbar-form navbar-left">
-              <button type="submit" onclick="closePanel()" class="btn btn-warning btn-search-issues" data-toggle="modal" data-target="#filterIssues" style="display: none;"><i class="fas fa-search"></i></button>
+              <button type="submit" onclick="closePanel()" class="btn btn-warning btn-search-issues" data-toggle="modal" data-target="#filterIssues" style="display: none;"><i class="fas fa-filter"></i></button>
             </div>
           </li>
           <li class="dropdown">
