removendo tag php

--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
                     </div>
     
                     <form action="#" method="post" name="logout">
-                        <input type="hidden" name="intent" value="<?=uri()?>">
+                        <input type="hidden" name="intent" value="#">
                         <div class="btn-group user-helper-dropdown">
                             <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">keyboard_arrow_down</i>
                             <ul class="dropdown-menu pull-right">
