--- a/public/index.html
+++ b/public/index.html
@@ -100,12 +100,8 @@
                 <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="#" class="bars">&nbsp;</a>
                 <a class="navbar-brand logo" href="./index.html">
-                    <img width="100px" src="./img/concremat_port340.png">
+                    <img width="150px" src="./img/cmat.png">
                 </a>
-                <a class="navbar-brand hidden-xs" href="./index.html">
-                    SysPlenus
-                </a>
-
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -204,7 +200,7 @@
             <!-- #Menu -->
     
             <!-- Footer -->
-            <div class="legal">
+            <!-- <div class="legal">
                 <div class="copyright">
                     <p>
                         <a href="#">Problemas ao utilizar o sistema?</a>
@@ -215,7 +211,7 @@
                     <a target="_blank" href="//www.concremat.com.br">Concremat Engenharia.<br>
                         <img width="30%" src="./img/concremat_port340.png"></a>
                 </div>
-            </div>
+            </div> -->
             <!-- #Footer -->
         </aside>
     
@@ -352,6 +348,7 @@
   <script src="/js/ForgeViewer.js"></script>
   <script src="/js/BIM360IssueExtension.js"></script>
   <script src="/js/IconMarkupExtension.js"></script>
+  <script src="/js/getIssues.js"></script>
 
   <script>
     $('select').select2({width: '100%', dropdownParent: $('#filterIssues')})
@@ -494,6 +491,12 @@
 
       relatorio.postMessage({ token, containerId, urn })
     }
+
+    localStorage.removeItem('nivelAlerta');
+    localStorage.removeItem('causaRaiz');
+    localStorage.removeItem('issueId');
+    localStorage.removeItem('localizacao');
+    localStorage.removeItem('face');
   </script>
 
   <script src="./lib/adminbsb-materialdesign/js/admin.js"></script>
