--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,8 @@
             <div class="navbar-header">
                 <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="#" class="bars">&nbsp;</a>
-                <a class="navbar-brand logo" href="./index.html">
-                    <img width="150px" src="./img/cmat.png">
+                <a class="navbar-brand logo" href="./index.html" style="padding: 0px 15px;">
+                    <img width="190px" src="./img/cmat.png">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
