--- a/public/index.html
+++ b/public/index.html
@@ -285,7 +285,7 @@
             <select class="form-control" id="nivelAlerta">
               <option value="" selected>Selecione ...</option>
             </select>
-            <label>Elemento (Detalhe da Locaização)</label>
+            <label>Elemento (Detalhe da Localização)</label>
             <select class="form-control" id="location">
               <option value="">Selecione ...</option>
             </select>
