Relatório PDF: fotos das anomalias

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
 
     <!-- Folhas de Estilo para Novo Layout -->
     <!-- Google Fonts -->
-    <link href="//fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
 
     <!-- Bootstrap Select Css -->
     <link rel="stylesheet" href="./lib/adminbsb-materialdesign/plugins/bootstrap-select/css/bootstrap-select.css">
@@ -56,10 +56,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/v/bs/pdfmake-0.1.18/dt-1.10.13/af-2.1.3/b-1.2.4/b-colvis-1.2.4/b-flash-1.2.4/b-html5-1.2.4/b-print-1.2.4/cr-1.3.2/fc-3.2.2/fh-3.1.2/kt-2.2.0/r-2.1.0/rr-1.2.0/sc-1.4.2/se-1.2.0/datatables.min.css"/>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.10/themes/default/style.min.css" integrity="sha512-P8BwDSUInKMA7I116Z1RFg/Dfk85uFdliEUYO7vQlwtxLVMNvZimfMAQsaf++9EhlAGOVX6yhDQAIY3/70jDUg==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="//developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/pdfmake-0.1.18/dt-1.10.13/af-2.1.3/b-1.2.4/b-colvis-1.2.4/b-flash-1.2.4/b-html5-1.2.4/b-print-1.2.4/cr-1.3.2/fc-3.2.2/fh-3.1.2/kt-2.2.0/r-2.1.0/rr-1.2.0/sc-1.4.2/se-1.2.0/datatables.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.10/themes/default/style.min.css" integrity="sha512-P8BwDSUInKMA7I116Z1RFg/Dfk85uFdliEUYO7vQlwtxLVMNvZimfMAQsaf++9EhlAGOVX6yhDQAIY3/70jDUg==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -115,12 +115,6 @@
                   <li>
                     <a href="#" onclick="exportXLS(this)" class="btn-search-issues" data-toggle="modal" role="button" style="display: none;">
                       <i class="material-icons">description</i>
-                      <i class="fas fa-spinner fa-spin" style="display: none;"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a name="screenshot" href="#" class="btn-search-issues" data-toggle="modal" role="button" style="display: none;">
-                      <i class="material-icons">camera_alt</i>
                       <i class="fas fa-spinner fa-spin" style="display: none;"></i>
                     </a>
                   </li>
@@ -335,28 +329,25 @@
   <!-- Bootstrap Core Js -->
   <script type="text/javascript" src="./lib/adminbsb-materialdesign/plugins/bootstrap/js/bootstrap.min.js"></script>
 
-  <!-- Slimscroll Plugin Js -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js" integrity="sha512-cJMgI2OtiquRH4L9u+WQW+mz828vmdp9ljOcm/vKTQ7+ydQUktrPVewlykMgozPP+NUBbHdeifE6iJ6UVjNw5Q==" crossorigin="anonymous"></script>
-
   <!-- Waves Effect Plugin Js -->
   <script type="text/javascript" src="./lib/adminbsb-materialdesign/plugins/node-waves/waves.js"></script>
 
+  <!-- Slimscroll Plugin Js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js" integrity="sha512-cJMgI2OtiquRH4L9u+WQW+mz828vmdp9ljOcm/vKTQ7+ydQUktrPVewlykMgozPP+NUBbHdeifE6iJ6UVjNw5Q==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha512-Sr1M6mlMOXTKahO1wcUzFu/kAb3iZVaQWGvxOEePRm7c2NjGRZ7ckRT6218PaSXlz8eEoFpKkDVvl2rTqKrQLA==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js" integrity="sha512-z8+IQvZEPLZTS3Dj7gklMVJfJMNbQjIQwmKMwAuX+P9KkzEmDIiXybdXsbWuoMlQ942SfyNafeu6JdOGwzCx0Q==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment-with-locales.min.js" integrity="sha512-+4wyLnVjbJnGld2sKt9RE0zwcDRmr2KimlbeYRRMZFqfKYV2o69ncGWG12VGMySqnPKZXpT8qq+p8OZJIZsTkQ==" crossorigin="anonymous"></script>
 
-  <!-- Jquery CountTo Plugin Js -->
-
-  <!-- DateTimePicker -->
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha512-Sr1M6mlMOXTKahO1wcUzFu/kAb3iZVaQWGvxOEePRm7c2NjGRZ7ckRT6218PaSXlz8eEoFpKkDVvl2rTqKrQLA==" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js" integrity="sha512-z8+IQvZEPLZTS3Dj7gklMVJfJMNbQjIQwmKMwAuX+P9KkzEmDIiXybdXsbWuoMlQ942SfyNafeu6JdOGwzCx0Q==" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment-with-locales.min.js" integrity="sha512-+4wyLnVjbJnGld2sKt9RE0zwcDRmr2KimlbeYRRMZFqfKYV2o69ncGWG12VGMySqnPKZXpT8qq+p8OZJIZsTkQ==" crossorigin="anonymous"></script>
-
-  <script src="//developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
+  <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
+  <script src="/js/state.js"></script>
+  <script src="/js/functions.js"></script>
   <script src="/js/ForgeTree.js"></script>
   <script src="/js/ForgeViewer.js"></script>
   <script src="/js/BIM360IssueExtension.js"></script>
   <script src="/js/IconMarkupExtension.js"></script>
   <script src="/js/getIssues.js"></script>
+  <script src="/js/RelatorioPDF.js"></script>
 
   <script>
     $('select').select2({width: '100%', dropdownParent: $('#filterIssues')})
@@ -378,14 +369,10 @@
       moment.locale('pt-BR')
       document.querySelector('a[name=pdf]')
         .addEventListener('click', exportPDF)
-      document.querySelector('a[name=screenshot]')
-        .addEventListener('click', screenshot)
     })
   </script>
 
   <script type="text/javascript">
-    var localizacaoEsquematica;
-
     function screenshot() {
       const $camera = $(this).find('.material-icons').first()
       const $spin = $(this).find('.fa-spinner').first()
@@ -403,7 +390,7 @@
         $camera.show()
 
         this.style.pointerEvents = null
-      });
+      })
     }
 
     function closePanel(){
@@ -479,52 +466,47 @@
       const urn = selected.urn;
       const token = localStorage.getItem('token')
 
-      const relatorio = new Worker('./js/RelatorioPDF.js')
-
       this.style.pointerEvents = 'none'
 
       $pdf.hide()
       $spin.show()
 
-      relatorio.addEventListener('message', (ev) => {
-        const page = 'relatorio-' + (new Date).getTime().toString()
-        const blob = new Blob([
-          `<!DOCTYPE html><html><head><meta charset="utf-8" /><title>${page}</title></head><body>`, ev.data[0], '</body></html>'
-        ], {type: 'text/html'})
-        const objUrl = URL.createObjectURL(blob)
-        const frame = document.createElement('iframe')
-        frame.setAttribute('src', objUrl)
-        frame.style.width = '100%'
-        frame.style.height = '75vh'
+      gerarRelatorioPDF(containerId, urn)
+        .then(([html]) => {
+          const $modal = $('#pdfModal')
+          const page = 'relatorio-' + (new Date).getTime().toString()
+          const blob = new Blob([
+            `<!DOCTYPE html><html><head><meta charset="utf-8" /><title>${page}</title></head><body>`, html, '</body></html>'
+          ], {type: 'text/html'})
 
-        const $modal = $('#pdfModal')
+          const objUrl = URL.createObjectURL(blob)
+          const frame = document.createElement('iframe')
 
-        $modal.find('.modal-body').html(frame)
-        $modal.find('.modal-header')
-          .children()
-          .first()
-          .off()
-          .click(() => {
-            frame.contentWindow.print()
-          })
+          frame.setAttribute('src', objUrl)
+          frame.style.width = '100%'
+          frame.style.height = '75vh'
 
-        $modal.modal()
-        $spin.hide()
-        $pdf.show()
+          $modal.find('.modal-body').html(frame)
+          $modal.find('.modal-header')
+            .children()
+            .first()
+            .off()
+            .click(() => {
+              frame.contentWindow.print()
+            })
 
-        this.style.pointerEvents = 'none'
-      })
+          $modal.modal()
+        })
+        .catch((err) => {
+          console.error(err)
 
-      relatorio.addEventListener('error', (ev) => {
-        console.error(ev)
-        $spin.hide()
-        $pdf.show()
-
-        this.style.pointerEvents = 'none'
-        alert('Ocorreu um erro ao tentar gerar um relatório')
-      })
-
-      relatorio.postMessage({ token, containerId, urn, localizacaoEsquematica })
+          alert('Ocorreu um erro ao tentar gerar um relatório')
+        })
+        .finally(() => {
+          this.style.pointerEvents = null
+          $spin.hide()
+          $pdf.show()
+        })
     }
 
     localStorage.removeItem('nivelAlerta');
@@ -535,7 +517,6 @@
   </script>
 
   <script src="./lib/adminbsb-materialdesign/js/admin.js"></script>
-  <script src="./js/toast.js"></script>
 
   </body>
 </html>
