--- a/public/index.html
+++ b/public/index.html
@@ -124,20 +124,6 @@
                       <i class="fas fa-spinner fa-spin" style="display: none;"></i>
                     </a>
                   </li>
-                  <!-- <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                          <i class="material-icons">notifications</i>
-                          <span class="label-count">1</span>
-                      </a>
-                      <ul class="dropdown-menu">
-                          <li class="header">NOTIFICAÇÃO</li>
-                          <li class="body">
-                          </li>
-                          <li class="footer">
-                              <a href="#">Visualiazar Todas as Notificações</a>
-                          </li>
-                      </ul>
-                  </li> -->
                 </ul>
             </div>
         </div>
@@ -200,35 +186,20 @@
                 </ul>
             </div>
             <!-- #Menu -->
-
-            <!-- Footer -->
-            <!-- <div class="legal">
-                <div class="copyright">
-                    <p>
-                        <a href="#">Problemas ao utilizar o sistema?</a>
-                    </p>
-                </div>
-                <div class="copyright">
-                    &copy; 2017 - <?=date('Y')?>
-                    <a target="_blank" href="//www.concremat.com.br">Concremat Engenharia.<br>
-                        <img width="30%" src="./img/concremat_port340.png"></a>
-                </div>
-            </div> -->
-            <!-- #Footer -->
         </aside>
 
         <!-- #END# Left Sidebar -->
     </section>
 
     <section class="content" style="margin-top: 40px;">
-      <div class="container-fluid fill">
+      <div class="container-fluid">
         <div class="card">
-          <div class="body">
-            <div class="row clearfix fill">
-              <div class="col-sm-12 col-md-12 col-lg-12 fill">
-                  <div id="forgeViewer"></div>
+          <div class="body" style="height: calc(100vh - 13rem);">
+              <div id="forgeViewer" style="position: relative; height: 100%;">
+                <div style="display: flex; align-items: center; height: 100%;">
+                  <h3 style="margin: 0 auto; color: rgb(200, 200, 200);">Selecionar o Modelo através do menu lateral.</h3>
+                </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
@@ -241,12 +212,12 @@
             <div id="userHubs">
               <div style="padding-top: 100px; text-align: center;">
                 <button class="btn btn-lg btn-default" id="autodeskSigninButton">
-                  <img src="//github.com/Autodesk-Forge/learn.forge.viewhubmodels/raw/master/img/autodesk_text.png" height="20"> Sign in
+                  <img src="https://github.com/Autodesk-Forge/learn.forge.viewhubmodels/raw/master/img/autodesk_text.png" height="20"> Sign in
                 </button>
                 <br/>
                 <br/>
                 <br/> You may also need to provision your<br/> BIM 360 Docs account for this app.<br/>
-                <a href="//forge.autodesk.com/blog/bim-360-docs-provisioning-forge-apps">Learn more</a>.
+                <a href="https://forge.autodesk.com/blog/bim-360-docs-provisioning-forge-apps">Learn more</a>.
               </div>
             </div>
           </div>
@@ -264,7 +235,7 @@
                     </button>
                 </div>
                 <div class="modal-body"></div>
-                </div>
+            </div>
         </div>
     </div>
 
@@ -334,6 +305,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js" integrity="sha512-z8+IQvZEPLZTS3Dj7gklMVJfJMNbQjIQwmKMwAuX+P9KkzEmDIiXybdXsbWuoMlQ942SfyNafeu6JdOGwzCx0Q==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment-with-locales.min.js" integrity="sha512-+4wyLnVjbJnGld2sKt9RE0zwcDRmr2KimlbeYRRMZFqfKYV2o69ncGWG12VGMySqnPKZXpT8qq+p8OZJIZsTkQ==" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.7/dist/html2canvas.min.js" integrity="sha256-Ax1aqtvxWBY0xWND+tPZVva/VQZy9t1Ce17ZJO+NTRc=" crossorigin="anonymous"></script>
 
   <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
   <script src="/js/state.js"></script>
