--- a/public/index.html
+++ b/public/index.html
@@ -171,10 +171,14 @@
                 <ul class="list">
                     <li class="header">Menu Principal</li>
                     <li>
-                        <a href="/">
-                            <i class="material-icons">home</i>
-                            <span>Início</span>
-                        </a>
+                      <a href="/">
+                          <i class="material-icons">home</i>
+                          <span>Início</span>
+                      </a>
+                      <a href="#" data-toggle="modal" data-target="#powerBI">
+                        <i class="material-icons">timeline</i>
+                        <span>PowerBI</span>
+                      </a>
                     </li>
 
                     <li>
@@ -225,8 +229,18 @@
       </div>
     </div>
 
+    <div class="modal fade" id="powerBI">
+      <div class="modal-dialog modal-lg" style="width: 1400px!important;">
+        <div class="modal-content">
+          <div class="modal-body" style="height: 800px;">
+            <iframe width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiODdlMzg5MDYtODM4MC00MTBjLTg2YzAtOGY5NDhhMWY4MWJhIiwidCI6IjBkODA1ZjQ0LTM5NDctNGNmNC04YmJhLTQ4ZjliNWVhMTk1OCJ9" frameborder="0"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="modal fade" id="pdfModal">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg" wid>
             <div class="modal-content">
                 <div class="modal-header">
                     <button class="btn btn-primary">Imprimir</button>
@@ -292,6 +306,28 @@
           </div>
       </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+          <div class="modal-header">
+              <h3 class="modal-title text-bold" id="exampleModalLabel">Anexos da Anomalia</h3>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body" id="img">
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          </div>
+          </div>
+      </div>
+      </div>
+
+      <button type="button" id="btn-anexo" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="display: none;">
+      Launch demo modal
+      </button>
 
   <!-- Bootstrap Core Js -->
   <script type="text/javascript" src="./lib/adminbsb-materialdesign/plugins/bootstrap/js/bootstrap.min.js"></script>
