--- a/public/index.html
+++ b/public/index.html
@@ -196,14 +196,24 @@
     </section>
 
     <section class="content" style="margin-top: 40px;">
-      <div class="container-fluid">
-        <div class="card">
-          <div class="body" style="height: calc(100vh - 13rem);">
-              <div id="forgeViewer" style="position: relative; height: 100%;">
-                <div style="display: flex; align-items: center; height: 100%;">
-                  <h3 style="margin: 0 auto; color: rgb(200, 200, 200);">Selecionar o Modelo através do menu lateral.</h3>
+      <div class="row">
+        <div class="container-fluid viewer">
+          <div class="card">
+            <div class="body" style="height: calc(100vh - 13rem);">
+                <div id="forgeViewer" style="position: relative; height: 100%;">
+                  <div style="display: flex; align-items: center; height: 100%;">
+                    <h3 style="margin: 0 auto; color: rgb(200, 200, 200);">Selecionar o Modelo através do menu lateral.</h3>
+                  </div>
                 </div>
-              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid chartSensor col-sm-4" style="display: none">
+          <div class="card">
+            <div class="body">
+              <canvas class="chart"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -342,6 +352,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment-with-locales.min.js" integrity="sha512-+4wyLnVjbJnGld2sKt9RE0zwcDRmr2KimlbeYRRMZFqfKYV2o69ncGWG12VGMySqnPKZXpT8qq+p8OZJIZsTkQ==" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.7/dist/html2canvas.min.js" integrity="sha256-Ax1aqtvxWBY0xWND+tPZVva/VQZy9t1Ce17ZJO+NTRc=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js" integrity="sha512-yadYcDSJyQExcKhjKSQOkBKy2BLDoW6WnnGXCAkCoRlpHGpYuVuBqGObf3g/TdB86sSbss1AOP4YlGSb6EKQPg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
   <script src="/js/state.js"></script>
@@ -369,6 +380,12 @@
   </script>
 
   <script type="text/javascript">
+    /* fetch('sensor_data.json')
+      .then((res) => res.json())
+      .then((data) => {
+        localStorage.setItem('SENSOR_DATA', JSON.stringify(data))
+      }) */
+
     document.addEventListener('DOMContentLoaded', function () {
       moment.locale('pt-BR')
       document.querySelector('a[name=pdf]')
